- ADD: Doubleclicking on a locally modified entry
       in the "Check For Updates" dialog opens
       the diff-viewer. (Stefan)
- ADD: Reduce memory footprint of the status
       cache. (Stefan Fuhrmann)
- BUG: If the log dialog already showed all
       revisions the first time then disable
       the "Get All" button. (Stefan)
- BUG: TSVN could crash during authentication
       when fetching the remote status. (Stefan)
- BUG: After an update, the "Show Log..." 
       only showed the last revision instead
       of all revisions since the last
       update. (Stefan)
- BUG: When looking for the associated program
       for a specific filetype (e.g. *.txt)
       the environement variables weren't
       expanded. (Stefan)

Version 0.21
- ADD: If multiple targets are selected for
       update the all targets which belong to
       the same repository (have the same uuid)
       are updated to the same revision, no matter
       if another commit happened in between
       those updates. (Stefan)
- ADD: Subversion got a new command: "Blame".
       TSVN has it too :) What it does?
       It shows you for each line in a file
       the revision it was last changed and
       the author (so you can blame a bug
       on that author :). (Stefan)
- ADD: The show log command now only shows
       the last 100 revisions, configurable
       in the settings dialog. A new "Get All"
       button then fetches the rest of the log
       messages if needed. (Stefan)
- CHG: Rewrite of the status cache. The time
       for sorting a by a column should now
       take much less time and scale much
       better than before. (Stefan)
- CHG: Don't error out when doing a merge 
       if the wc has been changed. (Stefan)
- BUG: Empty lines were not shown in log
       messages. (Stefan)
- BUG: Temp files weren't deleted before an
       import even if they were marked for
       deletion. (Stefan)
- BUG: The log message when creating a new