@@ -1,10 +1,10 @@
-#define FILEVER_INCVERSION        0,21,0,286
-#define PRODUCTVER_INCVERSION     0,21,0,286
-#define STRFILEVER_INCVERSION     "0, 21, 0, 286\0"
-#define STRPRODUCTVER_INCVERSION  "0, 21, 0, 286\0"
+#define FILEVER_INCVERSION        0,21,0,287
+#define PRODUCTVER_INCVERSION     0,21,0,287
+#define STRFILEVER_INCVERSION     "0, 21, 0, 287\0"
+#define STRPRODUCTVER_INCVERSION  "0, 21, 0, 287\0"
 
 #define TSVN_VERMAJOR             0
 #define TSVN_VERMINOR             21
 #define TSVN_VERMICRO             0
-#define TSVN_VERBUILD_INCVERSION  286
+#define TSVN_VERBUILD_INCVERSION  287
 
