@@ -1,3 +1,6 @@
+- ADD: The commit dialog has a context menu from
+       where its possible to revert changes
+       in listed files. (Stefan)
 - ADD: Doubleclicking on a locally modified entry
        in the "Check For Updates" dialog opens
        the diff-viewer. (Stefan)
